--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer id="footer">
         <p>Developed by <span>Suja Tanvir Ahmed</span></p>
     </footer>
 
