changed table view to grid view

--- a/index.html
+++ b/index.html
@@ -37,19 +37,9 @@
 
                     <p id="message">Notification message</p>
                     <div id="search-result" class="search-result">
-                        <table>
-                            <thead>
-                                <tr id="table-header">
-                                    <th>Serial</th>
-                                    <th>Book Name</th>
-                                    <th>Author</th>
-                                    <th>Publisher</th>
-                                    <th>First Published</th>
-                                </tr>
-                            </thead>
-                            <tbody id="book-table-body">
-                            </tbody>
-                        </table>
+                        <div id="book-card-cont">
+                            <!-- Book cards inside -->
+                        </div>
                     </div><!-- #search-result -->
 
                 </div><!-- #search -->
